; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_simple_pull_be16.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_simple_pull_be16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_buf_simple = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @net_buf_simple_pull_be16(%struct.net_buf_simple* %0) #0 {
  %2 = alloca %struct.net_buf_simple*, align 8
  %3 = alloca i32, align 4
  store %struct.net_buf_simple* %0, %struct.net_buf_simple** %2, align 8
  %4 = load %struct.net_buf_simple*, %struct.net_buf_simple** %2, align 8
  %5 = getelementptr inbounds %struct.net_buf_simple, %struct.net_buf_simple* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to i32*
  %8 = call i32 @UNALIGNED_GET(i32* %7)
  store i32 %8, i32* %3, align 4
  %9 = load %struct.net_buf_simple*, %struct.net_buf_simple** %2, align 8
  %10 = call i32 @net_buf_simple_pull(%struct.net_buf_simple* %9, i32 4)
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @sys_be16_to_cpu(i32 %11)
  ret i32 %12
}

declare dso_local i32 @UNALIGNED_GET(i32*) #1

declare dso_local i32 @net_buf_simple_pull(%struct.net_buf_simple*, i32) #1

declare dso_local i32 @sys_be16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
